[tool.poetry]
name = "vb-pdftopng"
version = "0.1.3"
description = "Modified function name from pdftopng -> main"
authors = ["vaibhavblayer <vaibhavblayer@gmail.com>"]
readme = "README.md"
packages = [{include = "vb_pdftopng"}]




[tool.poetry.scripts]
vb-pdftopng = "vb_pdftopng.main:main"


[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
