[tool.poetry]
name = "vb-pdftopng"
version = "0.1.5"
description = "Added help option [-h, --help]"
authors = ["vaibhavblayer <vaibhavblayer@gmail.com>"]
readme = "README.md"
packages = [{include = "vb_pdftopng"}]




[tool.poetry.scripts]
vb-pdftopng = "vb_pdftopng.main:main"


[tool.poetry.dependencies]
python = "^3.11"
pdf2image = "^1.16.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
